syntax = "proto3";
package prism.refractor;

import "gogoproto/gogo.proto";
import "prism/refractor/asset_state.proto";

option go_package = "github.com/prism-finance/prism-core/x/refractor/types";

message EventRefract {
  string creator = 1;
  string c_amount = 2;
  string maturity = 3;
  string refracted_p_amount = 4;
  string refracted_y_amount = 5;
  string fee = 6;
}

message EventRedeem {
  string creator = 1;
  string p_amount = 2;
  string y_amount = 3;
  string maturity = 4;
  string redeemed_c_amount = 5;
  string fee = 6;
}

message EventRefractorYieldDistribution {
  string asset_id = 1;
  string total_yield = 2;
  string protocol_fee = 3;
  string stake_yield = 4;
  string excess_yield = 5;
}

message EventSetAssetState {
  AssetState asset_state = 1 [(gogoproto.nullable) = false];
}
